Fix profile info panel not properly wrapping

--- a/app/(main)/settings/profile/page.module.scss
+++ b/app/(main)/settings/profile/page.module.scss
@@ -11,6 +11,7 @@
 .profile-info {
   margin-top: 2rem;
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 2rem;
   flex-wrap: wrap;
@@ -25,7 +26,7 @@
   padding: 1rem;
   background-color: var(--bg-contrast-100);
   border-radius: var(--br);
-  height: 100%;
+  flex-grow: 1;
 }
 
 .info-container {
@@ -80,7 +81,6 @@
 }
 
 .profile-picture-container {
-  margin-top: 1rem;
   flex: 0 0 10rem;
   display: flex;
   flex-direction: column;
